--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "consolidate": "^0.16.0",
+    "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "handlebars": "^4.7.6"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
