--- a/functions/package.json
+++ b/functions/package.json
@@ -2,19 +2,20 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+    "start": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "serve": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "10"
   },
   "main": "index.js",
   "dependencies": {
+    "body-parser": "1.18.2",
     "consolidate": "^0.16.0",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "handlebars": "^4.7.6"
@@ -22,5 +23,8 @@
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
   },
-  "private": true
+  "private": true,
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC"
 }
